--- a/haddock.cabal
+++ b/haddock.cabal
@@ -62,7 +62,8 @@ executable haddock
       ghc-boot,
       ghc >= 7.11 && < 8.1,
       bytestring,
-      transformers
+      transformers,
+      pipes
 
     other-modules:
       ResponseFile,
@@ -121,6 +122,7 @@ executable haddock
       Haddock.Options
       Haddock.GhcUtils
       Haddock.Syb
+      Haddock.Pipes
       Haddock.Convert
   else
     build-depends:  haddock-api == 2.16.*
