--- a/haddock-api/haddock-api.cabal
+++ b/haddock-api/haddock-api.cabal
@@ -49,16 +49,17 @@ library
     , xhtml >= 3000.2 && < 3000.3
     , Cabal >= 1.10
     , ghc-boot
-    , ghc >= 7.10 && < 7.12
+    , ghc >= 8
 
     , ghc-paths
-    , haddock-library == 1.2.*
+    , haddock-library  >= 1.4
     , pipes
+    , mtl
 
   hs-source-dirs:
       src
 
-  ghc-options: -funbox-strict-fields -Wall -fwarn-tabs -O2
+  ghc-options: -funbox-strict-fields -fwarn-tabs -O2
 
   exposed-modules:
     Documentation.Haddock
